--- a/client/src/Components/posts/posts.css
+++ b/client/src/Components/posts/posts.css
@@ -105,7 +105,7 @@
     font-size: 20px;
     font-weight:700;
     font-family: 'Roboto', sans-serif;
-    color: #000000;
+    color: #0f518f;
 }
 .priceDesc p{
     font-weight: 400;
