--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,5 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight:500;
 }
 
